--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             
             <li>1/2 cup Italian-style bread crumbs</li>
             <li>1/4 cup grated Parmesan cheese<li>
-1 egg
-1 tablespoon water
-1/4 cup all-purpose flour
-1/3 cup vegetable oil
-4 chicken breast cutlets, pounded to an even thickness (about 1 pound)
-1 can (24 oz each) Hunt's® Tomato Basil Pasta Sauce, divided
-1/2 cup shredded mozzarella cheese
-8 ounces dry spaghetti, uncooked
-2 tablespoons chopped fresh basil, optional
+<li>1 egg</li>
+<li>1 tablespoon water</li>
+<li>1/4 cup all-purpose flour</li>
+<li>1/3 cup vegetable oil</li>
+<li>4 chicken breast cutlets, pounded to an even thickness (about 1 pound)</li>
+<li>1 can (24 oz each) Hunt's® Tomato Basil Pasta Sauce, divided</li>
+<li>1/2 cup shredded mozzarella cheese</li>
+<li>8 ounces dry spaghetti, uncooked</li>
+<li>2 tablespoons chopped fresh basil, optional</li>
 </ul>
         </p>
 
