--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 
             
             <li>1/2 cup Italian-style bread crumbs</li>
-            <li>1/4 cup grated Parmesan cheese<li>
+            <li>1/4 cup grated Parmesan cheese</li>
 <li>1 egg</li>
 <li>1 tablespoon water</li>
 <li>1/4 cup all-purpose flour</li>
