--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Recipe</title>
 </head>
 <body>
-    <img src="Rectangle.png">
+    <img src="img/Rectangle.png">
     <h1><b>How to Coat 
         Chicken Parmesan</b></h1>
         <p>
@@ -29,6 +29,8 @@
 <li>2 tablespoons chopped fresh basil, optional</li>
 </ul>
         </p>
+
+<p>Prepare the chicken. Place each halved chicken breast between 2 sheets of plastic wrap or in a freezer bag. Carefully flatten the chicken breasts with a rolling pin to achieve uniform thickness, about ½-inch thick. Don’t pound the breasts too hard. Pat dry each breast completely with a paper towel and season with 1 teaspoon salt. Set aside for at least 10 minutes</p>
 
 
 </body>
