--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 <li>2 tablespoons chopped fresh basil, optional</li>
 </ul>
         </p>
+        <ol>
 
-<p>Prepare the chicken. Place each halved chicken breast between 2 sheets of plastic wrap or in a freezer bag. Carefully flatten the chicken breasts with a rolling pin to achieve uniform thickness, about ½-inch thick. Don’t pound the breasts too hard. Pat dry each breast completely with a paper towel and season with 1 teaspoon salt. Set aside for at least 10 minutes</p>
+<p><li>Prepare the chicken. Place each halved chicken breast between 2 sheets of plastic wrap or in a freezer bag. Carefully flatten the chicken breasts with a rolling pin to achieve uniform thickness, about ½-inch thick. Don’t pound the breasts too hard. Pat dry each breast completely with a paper towel and season with 1 teaspoon salt. Set aside for at least 10 minutes</li></p>
 
-
+</ol>
 </body>
 </html>
