--- a/index.html
+++ b/index.html
@@ -51,17 +51,29 @@
 </p>
 </ol>
 
-&nbsp;
+
 
 
 <img src="img/Rectangle 2.png">
 <h1><b>SHRIMP FAJITAS</b></h1>
+<ul>
 <b>Ingredients </b>
+<li>1 tablespoon vegetable oil</li>
+<li>2 cups sliced bell peppers red, orange, yellow or a combination</li>
+<li>2 teaspoons chili powder</li>
+<li>1/2 teaspoon ground cumin</li>
+<li>1/4 teaspoon onion powder</li>
+<li>1/2 teaspoon smoked paprika</li>
+<li>2 tablespoons chopped cilantro</li>
+<li>1 pound large shrimp peeled and deveined, tails removed if desired</li>
+<li>lime wedges for serving optional</li>
+<li>flour tortillas and fajita toppings of your choice</li>
+<li>salt and pepper to taste</li>
 
 
 
 
-
+</ul>
 
 
 
