--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1><b>Italian cuisine</b></h1>
     <img src="img/Rectangle.png">
+    <a href=“#rectangle”>Go to rectangle</a>
+    <article id=“rectangle”>
+
+    </article>
     <h2><b>How to Coat 
         Chicken Parmesan</b></h2>
         <p>
@@ -69,14 +73,27 @@
 <li>lime wedges for serving optional</li>
 <li>flour tortillas and fajita toppings of your choice</li>
 <li>salt and pepper to taste</li>
-
-
-
-
 </ul>
 
 
+<ol>
+    <li>
+<p>
+    To make these easy and delicious Shrimp Fajitas, you will need the following ingredients (full measurements in recipe card below):
 
+shrimp - I recommend using large white shrimp but you can feel free to use any type of shrimp that you like. I also kept the tails on when cooking, but I recommend removing the tails if you are planning to serve them with tortillas (for easy eating).
+fajita seasoning - we seasoned the shrimp with a homemade fajita seasoning blend of chili powder, ground cumin, paprika, garlic powder, and dried oregano.
+oil - we used avocado oil, but feel free to use any vegetable oil that you have on hand.
+vegetables - I used a variety of different colored bell peppers (feel free to use any color combination that you want), along with onions and garlic. You can also add in other quick-cooking such as green beans, zucchini, or sliced mushrooms.
+salt and pepper
+lime juice
+cilantro
+tortillas - optional, if serving with tortillas. Feel free to use corn tortillas or flour tortillas.
+</p>
+ </li>
+<h2>You will also need measuring cups and spoons, mixing bowl, and large skillet.</h2>
+
+</ol>
 
 
 
