--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1><b>Italian cuisine</b></h1>
+    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.  <a href=“#dessert (Cannoli Shells)”>Go to dessert (Cannoli Shells)</a>
+        </p>
+  
+    
     <img src="img/Rectangle.png">
     <a href=“#rectangle”>Go to see vedio</a>
     <article id=“rectangle”>
@@ -106,7 +110,7 @@ tortillas - optional, if serving with tortillas. Feel free to use corn tortillas
 </ol>
 
 
-
+&nbsp;
 
 
 <h1><b>dessert (Cannoli Shells)</h1></b>
@@ -120,6 +124,17 @@ tortillas - optional, if serving with tortillas. Feel free to use corn tortillas
    <li>Egg and egg white</li>
    <li>Vegetable oil</li>
 </ul>
+<p>
+   <h3> How to make Cannoli Shells:</h3>
+First, combine the dry ingredients and mix them in a food processor. Then add the pebbles and pulse until it looks like small pebbles. 
+Next, add the egg and cold wine and then pulse until the dough barely begins to hold together. 
+Then, knead the dough on a floured surface until dough is smooth. Next, wrap in plastic and chill for 1 hour. Next, roll out the dough to ⅛ inch thick and cut into 4-inch round circles. Pull each circle into a 5-inch circle. 
+Next, place the egg white in a bowl and set it aside. Then, heat the oil in a pan to 350 degrees. Wrap one oval of dough loosely lengthwise around a cannoli form or 1-inch-diameter wooden dowel or cannoli form. Next, brush one end of the dough with egg white, then pull the dry end over the top and press down to seal. 
+Now using tongs, lower the dough into the oil and fry for about 2-3 minutes. Remove the shells with the tongs and transfer them to the paper towel-lined plate to cool.
+When the shells are cool enough to touch, remove the molds and repeat with the remaining dough in batches until all shells have been fried.
+Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
+
+</p>
 <a href=“#cannoli”>Watch the Cannoli Video!</a>
     <article id=“cannoli”></article>
 
