--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
 </head>
 <body>
     <h1><b>Italian cuisine</b></h1>
-    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.  <a href=“#dessert (Cannoli Shells)”>Go to dessert (Cannoli Shells)</a>
-        </p>
+    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.  <a href="#dessert">go to dessert</a>
+        <article id=“dessert”>
+        </article>
+
+        <a href="#How to coat Chicken parmesan">go to How to coat Chicken parmesan</a>
+        <article id=“HowtocoatChickenparmesan”>
+        </article>
+        <a href=“#SHRIMPFAJITAS”>Go to SHRIMP FAJITAS</a>
+        <article id=“SHRIMPFAJITAS”>
+        </article>
+    </p>
   
     
     <img src="img/Rectangle.png">
     <a href=“#rectangle”>Go to see vedio</a>
-    <article id=“rectangle”>
-
-    </article>
-    <h2><b>How to Coat 
+    
+    <h2 id="How to coat Chicken parmesan"><b>How to Coat 
         Chicken Parmesan</b></h2>
         <p>
             <ul>
@@ -63,9 +70,8 @@
 
 
 <img src="img/Rectangle 2.png">
-<a href=“#rectangle2”>Go to see vedio</a>
-    <article id=“rectangle2”></article>
-<h1><b>SHRIMP FAJITAS</b></h1>
+
+<h1 id="SHRIMPFAJITAS"><b>SHRIMP FAJITAS</b></h1>
 <ul>
 <b>Ingredients </b>
 <li>1 tablespoon vegetable oil</li>
@@ -113,7 +119,7 @@ tortillas - optional, if serving with tortillas. Feel free to use corn tortillas
 &nbsp;
 
 
-<h1><b>dessert (Cannoli Shells)</h1></b>
+<h1 id="dessert"> <b>dessert (Cannoli Shells)</b> </h1>
 <h2>Ingredients Needed to Make Cannoli Shells</h2>
 <ul>
    <li>Unbleached all-purpose flour</li>
