--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1><b>Italian cuisine</b></h1>
-    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.  <a href="#dessert">go to dessert</a>
+    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.  
+        <a href="#dessert">go to dessert</a>
         <article id=“dessert”>
         </article>
-
         <a href="#How to coat Chicken parmesan">go to How to coat Chicken parmesan</a>
         <article id=“HowtocoatChickenparmesan”>
         </article>
-        <a href=“#SHRIMPFAJITAS”>Go to SHRIMP FAJITAS</a>
+        <a href="#SHRIMP FAJITAS">go to SHRIMP FAJITAS</a>
         <article id=“SHRIMPFAJITAS”>
         </article>
     </p>
@@ -71,7 +71,7 @@
 
 <img src="img/Rectangle 2.png">
 
-<h1 id="SHRIMPFAJITAS"><b>SHRIMP FAJITAS</b></h1>
+<h1 id="SHRIMP FAJITAS"><b>SHRIMP FAJITAS</b></h1>
 <ul>
 <b>Ingredients </b>
 <li>1 tablespoon vegetable oil</li>
