--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <h1><b>Italian cuisine</b></h1>
     <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.  
-        <a href="#dessert">go to dessert</a>
+        <a href="#dessert">go to Dessert</a>
         <article id=“dessert”>
         </article>
-        <a href="#How to coat Chicken parmesan">go to How to coat Chicken parmesan</a>
-        <article id=“HowtocoatChickenparmesan”>
+        <a href="#How to cook Chicken parmesan">go to How to coat Chicken parmesan</a>
+        <article id=“HowtocookChickenparmesan”>
         </article>
-        <a href="#SHRIMP FAJITAS">go to SHRIMP FAJITAS</a>
-        <article id=“SHRIMPFAJITAS”>
+        <a href="#Shrimp ">go to Shrimp </a>
+        <article id=“Shrimp”>
         </article>
     </p>
   
@@ -24,7 +24,7 @@
     <img src="img/Rectangle.png">
     <a href=“#rectangle”>Go to see vedio</a>
     
-    <h2 id="How to coat Chicken parmesan"><b>How to Coat 
+    <h2 id="How to cook Chicken parmesan"><b>How to cook 
         Chicken Parmesan</b></h2>
         <p>
             <ul>
@@ -71,7 +71,7 @@
 
 <img src="img/Rectangle 2.png">
 
-<h1 id="SHRIMP FAJITAS"><b>SHRIMP FAJITAS</b></h1>
+<h1 id="Shrimp"><b>Shrimp</b></h1>
 <ul>
 <b>Ingredients </b>
 <li>1 tablespoon vegetable oil</li>
