--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
   
     
-    <img src="img/Rectangle.png">
+    <img src="img/Rectangle.png" width="100%">
     <a href=“#rectangle”>Go to see vedio</a>
     
     <h2 id="How to cook Chicken parmesan"><b>How to cook 
@@ -69,7 +69,7 @@
 
 
 
-<img src="img/Rectangle 2.png">
+<img src="img/Rectangle 2.png" width="100%">
 
 <h1 id="Shrimp"><b>Shrimp</b></h1>
 <ul>
@@ -144,6 +144,6 @@ Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
 <a href=“#cannoli”>Watch the Cannoli Video!</a>
     <article id=“cannoli”></article>
 
-<img src="img/Sicilian_Cannoli.jpg.webp">
+<img src="img/Sicilian_Cannoli.jpg.webp"width=100%>
 </body>
 </html>
