--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <h1><b>Italian cuisine</b></h1>
-    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.  
+    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients </p>  
         <a href="#dessert">go to Dessert</a>
         <article id=“dessert”>
         </article>
-        <a href="#How to cook Chicken parmesan">go to How to coat Chicken parmesan</a>
+        <a href="#HowtocookChickenparmesan">go to How to coat Chicken parmesan</a>
         <article id=“HowtocookChickenparmesan”>
         </article>
         <a href="#Shrimp ">go to Shrimp </a>
         <article id=“Shrimp”>
         </article>
-    </p>
+
   
     
     <img src="img/Rectangle.png" width="100%">
