--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Recipe</title>
 </head>
 <body>
-    <h1><b>Italian cuisine</b></h1>
+    <h1>Italian cuisine</h1>
     <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients </p>  
         <a href="#dessert">go to Dessert</a>
         <article id=“dessert”>
