--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   
     
-    <img src="img/Rectangle.png" width="100%">
+    <img src="img/Rectangle.png" alt=""width="100%">
     <a href=“#rectangle”>Go to see vedio</a>
     
     <h2 id="How to cook Chicken parmesan"><b>How to cook 
