--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
     <p>Contact the author of this page:</p>
     <address>
     <a href="tel:+393899262528">(39) 3899262528</a>
-    <a href="mailto:hamidi.zahra177@gmail.com.com">jim@rock.com</a><br>
+    <a href="mailto:hamidi.zahra177@gmail.com.com">hamidi.zahra177@gmail</a><br>
 </address>
 </footer>
 </body>
