--- a/dessert.html
+++ b/dessert.html
@@ -7,6 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+  
+<h1 id="dessert"> <b>dessert (Cannoli Shells)</b> </h1>
+<h2>Ingredients Needed to Make Cannoli Shells</h2>
+<ul>
+   <li>Unbleached all-purpose flour</li>
+   <li>Granulated sugar</li>
+   <li>Salt</li>
+   <li>Unsalted butter</li>
+   <li>Marsala wine</li>
+   <li>Egg and egg white</li>
+   <li>Vegetable oil</li>
+</ul>
+<h3> How to make Cannoli Shells:</h3>
+<p>
+First, combine the dry ingredients and mix them in a food processor. Then add the pebbles and pulse until it looks like small pebbles. 
+Next, add the egg and cold wine and then pulse until the dough barely begins to hold together. 
+Then, knead the dough on a floured surface until dough is smooth. Next, wrap in plastic and chill for 1 hour. Next, roll out the dough to ⅛ inch thick and cut into 4-inch round circles. Pull each circle into a 5-inch circle. 
+Next, place the egg white in a bowl and set it aside. Then, heat the oil in a pan to 350 degrees. Wrap one oval of dough loosely lengthwise around a cannoli form or 1-inch-diameter wooden dowel or cannoli form. Next, brush one end of the dough with egg white, then pull the dry end over the top and press down to seal. 
+Now using tongs, lower the dough into the oil and fry for about 2-3 minutes. Remove the shells with the tongs and transfer them to the paper towel-lined plate to cool.
+When the shells are cool enough to touch, remove the molds and repeat with the remaining dough in batches until all shells have been fried.
+Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
+
+</p>
+<a href=“#cannoli”>Watch the Cannoli video!</a>
+
+
+<img src= " img/Sicilian_Cannoli.webp " alt="" width="100%"  loading="lazy" >  
 </body>
 </html>
