--- a/chicken.html
+++ b/chicken.html
@@ -9,11 +9,11 @@
 <body>
     <img src="img/Chickenparmesan.png" alt=""  width="100%" loading="lazy">
     <a href=“#chickenparmesan”>Go to see video</a>
-    
-    <h2 id="CHICKEN">How to cook 
-        Chicken Parmesan</h2>
-      
-            <b>Ingredients </b>
+    <article>
+    <h1 id="CHICKEN">How to cook 
+        Chicken Parmesan</h1>
+    </article>
+            <h2<b>Ingredients </b></h2>
             <ul>
                 <li>1/2 cup Italian-style bread crumbs</li>
                 <li>1/4 cup grated Parmesan cheese</li>
