--- a/chicken.html
+++ b/chicken.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe chicken parmesan</title>
 </head>
 <body>
+    <h1>Chicken parmesan</h1>
     <img src="img/Chickenparmesan.png" alt=""  width="100%" loading="lazy">
     <a href=“#chickenparmesan”>Go to see video</a>
     <article>
-    <h1 id="CHICKEN">How to cook 
-        Chicken Parmesan</h1>
+    <h2 id="CHICKEN">How to cook 
+        Chicken Parmesan</h2>
     </article>
-            <h2<b>Ingredients </b></h2>
+            <h3<b>Ingredients </b></h3>
             <ul>
                 <li>1/2 cup Italian-style bread crumbs</li>
                 <li>1/4 cup grated Parmesan cheese</li>
