--- a/dessert.html
+++ b/dessert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe cannoli shells</title>
 </head>
 <body>
   
@@ -33,6 +33,6 @@ Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
 <a href=“#cannoli”>Watch the Cannoli video!</a>
 
 
-<img src= " img/Sicilian_Cannoli.webp " alt="" width="100%"  loading="lazy" >  
+<img src= " img/s " alt="" width="100%"  loading="lazy" >  
 </body>
 </html>
