--- a/chicken.html
+++ b/chicken.html
@@ -38,6 +38,7 @@
     Then, prepare the tomato sauce. Remove all but 2 tablespoons of the hot oil in the skillet. Add onions and sauté for 2 minutes until soft and tender.</li>
     <li>Bake in a 425F preheated oven for 15-20 minutes until the cheese melts and turns golden brown. Serve with spaghetti and garnish with more parsley on top.</li>
 </ol>
+<a href="index.html">back to home page</a>
   
 </body>
 </html>
