--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <a href="#top"> go to First recipe </a>
 
     <p>Contact the author of this page:</p>
+    <a href="chicken.html">get chicken parmesan recipe </a>
     <address>
     <a href= "tel:+393899262528" >(39) 3899262528</a>
     <a href="mailto:hamidi.zahra177@gmail.com.com">hamidi.zahra177@gmail</a><br>
