--- a/dessert.html
+++ b/dessert.html
@@ -33,6 +33,6 @@ Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
 <a href=“#cannoli”>Watch the Cannoli video!</a>
 
 
-<img src= " img/s " alt="" width="100%"  loading="lazy" >  
+<img src= "img/Sicilian_Cannoli.png" alt="" width="100%"  loading="lazy" >  
 </body>
 </html>
