--- a/seafood.html
+++ b/seafood.html
@@ -51,6 +51,7 @@ tortillas - optional, if serving with tortillas. Feel free to use corn tortillas
 
 
 <img src="img/shrimp.png" alt="" width="100%"  loading="lazy">
+<a href="index.html">back to home page</a>
 
 </body>
 </html>
