--- a/dessert.html
+++ b/dessert.html
@@ -30,8 +30,8 @@ When the shells are cool enough to touch, remove the molds and repeat with the r
 Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
 
 </p>
-<a href=“#cannoli”>Watch the Cannoli video!</a>
 
+<a href="index.html">back to home page</a>
 
 <img src= "img/Sicilian_Cannoli.png" alt="" width="100%"  loading="lazy" >  
 </body>
