--- a/chicken.html
+++ b/chicken.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chicken parmesan</h1>
-    <img src="img/Chickenparmesan.png" alt=""  width="100%" loading="lazy">
+    <img src="img/chickenparmigiana.png" alt=""  width="100%" loading="lazy">
     <a href=“#chickenparmesan”>Go to see video</a>
     <article>
     <h2 id="CHICKEN">How to cook 
@@ -39,6 +39,7 @@
     <li>Bake in a 425F preheated oven for 15-20 minutes until the cheese melts and turns golden brown. Serve with spaghetti and garnish with more parsley on top.</li>
 </ol>
 <a href="index.html">back to home page</a>
-  
+<span class="author">Author:Maria</span>
+<h2>The copyright &copy; 2023 </h2>
 </body>
 </html>
