--- a/dessert.html
+++ b/dessert.html
@@ -33,6 +33,8 @@ Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
 
 <a href="index.html">back to home page</a>
 
-<img src= "img/Sicilian_Cannoli.png" alt="" width="100%"  loading="lazy" >  
+<img src= "img/Sicilian_Cannoli.png" alt="" width="100%"  loading="lazy" >
+<span class="author">Author:Maria</span> 
+<h2>The copyright &copy; 2023 </h2>
 </body>
 </html>
