--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <a href="mailto:hamidi.zahra177@gmail.com.com">hamidi.zahra177@gmail</a><br>
 </address>
 </footer>
+<span class="author">Author:Maria</span>
+<h2>The copyright &copy; 2023 </h2>
 </body>
 </html>
