--- a/seafood.html
+++ b/seafood.html
@@ -48,10 +48,12 @@ tortillas - optional, if serving with tortillas. Feel free to use corn tortillas
     
     4-Serve. Serve immediately with tortillas or rice, if desired.</li>
 </ol>
+<span class="author">Author:Maria</span>
 
 
 <img src="img/shrimp.png" alt="" width="100%"  loading="lazy">
 <a href="index.html">back to home page</a>
 
+<h2>The copyright &copy; 2023 </h2>
 </body>
 </html>
