--- a/chicken.html
+++ b/chicken.html
@@ -7,7 +7,7 @@
     <title>Recipe chicken parmesan</title>
 </head>
 <body>
-    <h1>Chicken parmesan</h1>
+    <header><h1>Chicken parmesan</h1></header>
     <img src="img/chickenparmigiana.png" alt=""  width="100%" loading="lazy">
     <a href=“#chickenparmesan”>Go to see video</a>
     <article>
