--- a/dessert.html
+++ b/dessert.html
@@ -9,7 +9,7 @@
 <body>
   
 <h1 id="dessert"> <b>dessert (Cannoli Shells)</b> </h1>
-<h2>Ingredients Needed to Make Cannoli Shells</h2>
+<h2>Ingredients Need to Make Cannoli Shells</h2>
 <ul>
    <li>Unbleached all-purpose flour</li>
    <li>Granulated sugar</li>
