--- a/seafood.html
+++ b/seafood.html
@@ -7,6 +7,7 @@
     <title>Recipe shrimp</title>
 </head>
 <body>
+    <header>Shrimp Scampi</header>
     <h1 id="Seafood"><b>Seafoodp</b></h1>
 <b>Ingredients </b>
 <ul>
@@ -38,7 +39,7 @@ lime juice
 cilantro
 tortillas - optional, if serving with tortillas. Feel free to use corn tortillas or flour tortillas.
  </li>
-<li>HOW TO MAKE THE BEST SHRIMP FAJITAS
+<li>HOW TO MAKE THE BEST SHRIMP Scampi
 
     1-Season the shrimp. In a medium mixing bowl or ziploc bag, add shrimp, chili powder, cumin, paprika, garlic powder, and oregano. Mix well until evenly coated, and set aside.
     
