--- a/home.html
+++ b/home.html
@@ -9,7 +9,9 @@
 <body>
     <header><h1>Italian cuisine</h1></header>
    
- <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.</p> 
+ 
+    <p>Italian cuisine has a great variety of different ingredients which are commonly used, ranging from fruits, vegetables, grains, cheeses, meats and fish. In northern Italy, fish (such as cod, or baccalà), potatoes, rice, corn (maize), sausages, pork, and different types of cheese are the most common ingredients.</p> 
+    <div><a href="home.html">home </a></div>
  <div><a href="chicken.html">get chicken parmesan recipe </a></div>
  <div><a href="seafood.html">get shrimp recipe </a></div>
  <div><a href="dessert.html">get Cannoli recipe </a></div>
