--- a/chicken.html
+++ b/chicken.html
@@ -7,6 +7,10 @@
     <title>Recipe chicken parmesan</title>
 </head>
 <body>
+    <div><a href="index.html">homepage </a></div>
+ <div><a href="chicken.html">get chicken parmesan recipe </a></div>
+ <div><a href="seafood.html">get shrimp recipe </a></div>
+ <div><a href="dessert.html">get Cannoli recipe </a></div>
     <header><h1>Chicken parmesan</h1></header>
     <img src="img/chickenparmigiana.png" alt=""  width="100%" loading="lazy">
     <a href=“#chickenparmesan”>Go to see video</a>
