--- a/dessert.html
+++ b/dessert.html
@@ -7,6 +7,10 @@
     <title>Recipe cannoli shells</title>
 </head>
 <body>
+    <div><a href="index.html">homepage </a></div>
+ <div><a href="chicken.html">get chicken parmesan recipe </a></div>
+ <div><a href="seafood.html">get shrimp recipe </a></div>
+ <div><a href="dessert.html">get Cannoli recipe </a></div>
   
 <h1 id="dessert"> <b>dessert (Cannoli Shells)</b> </h1>
 <h2>Ingredients Need to Make Cannoli Shells</h2>
