--- a/seafood.html
+++ b/seafood.html
@@ -7,6 +7,10 @@
     <title>Recipe shrimp</title>
 </head>
 <body>
+    <div><a href="index.html">homepage </a></div>
+ <div><a href="chicken.html">get chicken parmesan recipe </a></div>
+ <div><a href="seafood.html">get shrimp recipe </a></div>
+ <div><a href="dessert.html">get Cannoli recipe </a></div>
     <header>Shrimp Scampi</header>
     <h1 id="Seafood"><b>Seafoodp</b></h1>
 <b>Ingredients </b>
