--- a/chicken.html
+++ b/chicken.html
@@ -44,6 +44,6 @@
 </ol>
 <a href="index.html">back to home page</a>
 <span class="author">Author:Maria</span>
-<h2>The copyright &copy; 2023 </h2>
+<p>The copyright &copy; 2023 </p>
 </body>
 </html>
