--- a/dessert.html
+++ b/dessert.html
@@ -39,6 +39,6 @@ Finally, dip ends of cooled shells in melted chocolate, and cool until dry.
 
 <img src= "img/Sicilian_Cannoli.png" alt="" width="100%"  loading="lazy" >
 <span class="author">Author:Maria</span> 
-<h2>The copyright &copy; 2023 </h2>
+<p>The copyright &copy; 2023 </p>
 </body>
 </html>
