--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 </address>
 </footer>
 <span class="author">Author:Maria</span>
-<h2>The copyright &copy; 2023 </h2>
+<p>The copyright &copy; 2023 </p>
 </body>
 </html>
