--- a/seafood.html
+++ b/seafood.html
@@ -59,6 +59,6 @@ tortillas - optional, if serving with tortillas. Feel free to use corn tortillas
 <img src="img/shrimp.png" alt="" width="100%"  loading="lazy">
 <a href="index.html">back to home page</a>
 
-<h2>The copyright &copy; 2023 </h2>
+<p>The copyright &copy; 2023 </p>
 </body>
 </html>
